--- a/app/assets/stylesheets/api/profile.scss
+++ b/app/assets/stylesheets/api/profile.scss
@@ -108,3 +108,19 @@
         justify-content: space-evenly;
     }
 }
+
+.item {
+    font-weight: bold;
+    width: fit-content;
+    height: unset;
+    padding: 14px 12px;
+    border-radius: 8px;
+    font-size: 16px;
+    gap: 6px;
+    flex-direction: row;
+}
+
+.item:hover {
+    cursor: pointer;
+    background-color: $icon-hover-bg;
+}
