--- a/app/assets/stylesheets/api/users.scss
+++ b/app/assets/stylesheets/api/users.scss
@@ -156,6 +156,7 @@
             padding: 5px;
             border-radius: 8px;
             box-sizing: border-box;
+            width: 100%;
         }
 
         .item:hover {
